--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ header .follow-logos a:hover {
 }
 
 .home .image img {
-  width: 90%;
+  width: 100%;
   border-radius: 0.8rem;
   border: 1rem solid var(--img-color);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
@@ -260,7 +260,7 @@ header .follow-logos a:hover {
 }
 
 .about .row-1 .image {
-  flex: 1 1 25rem;
+  flex: 1 1 40rem;
 }
 
 .about .row-1 .image img {
@@ -285,6 +285,7 @@ header .follow-logos a:hover {
   color: #222;
   font-size: 1.6rem;
   padding: 0.5rem 0;
+  text-transform: none;
 }
 
 .about .row-1 .content .box-container {
@@ -435,6 +436,7 @@ header .follow-logos a:hover {
   color: #222;
   font-size: 1.7rem;
   padding: 0.5rem 0;
+  text-transform: none;
 }
 
 .contact .row {
@@ -479,6 +481,7 @@ header .follow-logos a:hover {
 }
 
 .contact .row form .btn {
+  text-align: center;
   margin-top: 0;
   margin-bottom: 1.7rem;
   width: 100%;
